--- a/package.json
+++ b/package.json
@@ -67,21 +67,22 @@
         "efbenson.scad"
     ],
     "devDependencies": {
-        "@types/bluebird": "^3.5.5",
-        "@types/mocha": "^2.2.32",
-        "@types/node": "^6.0.78",
-        "mocha": "^2.3.3",
-        "typescript": "^2.3.4",
-        "vscode": "^1.0.0"
+        "@types/bluebird": "^3.5.28",
+        "@types/mocha": "^2.2.48",
+        "@types/node": "^6.14.8",
+        "@types/tmp": "^0.1.0",
+        "mocha": "^6.2.2",
+        "typescript": "^2.9.2",
+        "vscode": "^1.1.36"
     },
     "dependencies": {
-        "bluebird": "^3.5.0",
+        "bluebird": "^3.7.1",
         "fs-then-native": "^2.0.0",
         "inflection": "^1.12.0",
-        "lodash": "^4.17.4",
-        "mustache": "^2.3.0",
+        "lodash": "^4.17.15",
+        "mustache": "^2.3.2",
         "pify": "^3.0.0",
-        "scad-parser": "^1.0.14",
-        "tmp": "0.0.31"
+        "scad-parser": "^1.0.17",
+        "tmp": "0.1.0"
     }
 }
